@@ -170,7 +170,7 @@ script:
   - cd bindings/python
   - 'if [[ "$toolset" != "gcc-sanitizer" && "$variant" != "" ]]; then
       bjam -j3 warnings-as-errors=on ssl=$ssl crypto=$crypto debug-iterators=on picker-debugging=on invariant-checks=full $toolset variant=$variant stage_module libtorrent-link=shared install-type=LIB dll-path=../../lib &&
-      LD_LIBRARY_PATH=../../lib DYLD_LIBRARY_PATH=../../lib python test.py test_example_client;
+      LD_LIBRARY_PATH=../../lib DYLD_LIBRARY_PATH=../../lib python test.py;
     fi'
   - cd ../..;
 
