@@ -1,4 +1,5 @@
 	* fix crash caused by empty bitfield 
+	* remove deprecated functions from python examples
 	* add piece index and block index python bindings
 	* removed disk-access-log build configuration
 	* removed mmap_cache feature
